--- a/style.css
+++ b/style.css
@@ -4,3 +4,29 @@ font-family: 'Lobster', cursive;
 font-family: 'Nunito', sans-serif;
 }
 
+.darkish{
+    color:#6e6c6c ;
+  }
+  .explore{
+    background-color: #F4FAFD;
+  }
+  .item:after {
+    content:"";
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background:rgba(0,0,0,0.6);
+  }
+  .footer-bg{
+    background-color: #161616;
+  }
+  
+  .elli {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
